--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,17 @@
 .badge{
     display: 'inline-block'
 }
+
+header{
+    display: flex;
+}
+
+/*.header_title{
+    border: 1px solid red;
+}*/
+
+.flag{
+    text-align: right;
+    padding-right: 10px;
+    vertical-align: middle;
+}
