--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,8 +4,13 @@ header {
 
 .header_title {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    padding: 5px;
+    padding: 10px 20px 0px 20px;
+    /*border: 1px solid palevioletred;*/
 }
+
+/*.header_div{
+    border: 1px solid palevioletred;
+}*/
 
 .header_flag {
     text-align: right;
