--- a/assets/styles.css
+++ b/assets/styles.css
@@ -46,7 +46,7 @@ header {
 }
 
 .badge{
-    /*border: 1px solid red;*/
+    border: 1px solid red;
     vertical-align: middle;
 }
 
@@ -64,4 +64,15 @@ header {
 
 .slider_control{
     padding: 0px 20px 0px 20px;
+}
+
+.cards-row{
+    padding: 20px;
+    /*border: 3px solid red;*/
+}
+
+.filters-div{
+    /*border: 3px solid red;*/
+    display: inline-block; 
+    padding: 20px;
 }
