--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,7 @@
 body {
     /*border: 3px solid red;*/
-    max-width: 1336px;
-    min-width: 1080px;
+    max-width: 1400px;
+    min-width: 1150px;
     margin: auto;
 }
 
@@ -36,7 +36,6 @@ header {
     width: 60%;
     /*border: 3px solid yellow;*/
     margin: 0px;
-    /*width: 60%;*/
 }
 
 .card-title{
@@ -49,14 +48,21 @@ header {
     text-align: center;
 }
 
-.slider_control{
-    padding: 0px 20px 0px 20px;
+.card {
+    height: 100%;
+    /*border: 3px solid grey;*/
 }
 
 .cards-row{
     padding: 20px;
     /*border: 3px solid red;*/
 }
+
+.slider_control{
+    padding: 0px 20px 0px 20px;
+}
+
+
 
 .filters-div{
     /*border: 3px solid red;*/
